[package]
name = "dungeoncrawl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = "thin"
opt-level = "z"
strip = true

[dependencies]
bracket-lib = "0.8.1"
legion = "0.4.0"
serde = {version = "=1.0.115"}
ron = "=0.6.1"
macroquad = "0.3.24"
macroquad-particles = "0.1.1"
macroquad-tiled = "0.1.1"
egui-macroquad = "0.12.0"
egui = "0.19.0"
